--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <files-path name="my_images" path="images/"/>
-    <files-path name="my_docs" path="docs/"/>
+    <external-files-path name="my_images" path="/" />
 </paths>
