consolidate ItemDetailFragment and ItemDetailActivity (who needs 2 pane layouts) and create more full layout for it

--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -39,7 +39,100 @@
         android:id="@+id/item_detail_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <LinearLayout
+            android:id="@+id/item_detail"
+            style="?android:attr/textAppearanceLarge"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="16dp"
+            android:textIsSelectable="true"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/expDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:hint="Expiration Date"
+                android:inputType="textPersonName" />
+            <LinearLayout
+                android:id="@+id/expiration_actions"
+                style="?android:attr/textAppearanceLarge"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="16dp"
+                android:textIsSelectable="true"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/expirationDatePicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pick_expiration_date"
+                    android:onClick="showDatePickerDialog" />
+
+                <Button
+                    android:id="@+id/expirationImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="getExpirationImage"
+                    android:text="Take Image" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/notifDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:hint="Notification Date"
+                android:inputType="textPersonName" />
+
+            <Button
+                android:id="@+id/notificationDatePicker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Set notification date"
+                android:onClick="showDatePickerDialog" />
+
+            <Button
+                android:id="@+id/barcodeImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="scanBarcode"
+                android:text="Scan Barcode" />
+            <Button
+                android:id="@+id/notificationImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="getItemImage"
+                android:text="Take Image of Whole Item" />
+
+            <EditText
+                android:id="@+id/edtDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:hint="item description (what is it for?)"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/edtNotes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:hint="Notes (e.g. where do you keep it? whose is it?)"
+                android:inputType="textMultiLine" />
+
+            <Button
+                android:id="@+id/btAdd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Submit" />
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addItemButton"
