parse out barcode api JSON to get info

--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -96,6 +96,13 @@
                 android:inputType="date" />
 
             <TextView
+                android:id="@+id/productLink"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:visibility="invisible" />
+
+            <TextView
                 android:id="@+id/barcodeText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
